# kmers

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  clean-install.sh  model.tex  read.py  requirements.txt  setup.cfg  setup.py
data/: test5.fsa
doc/: hess_sigma_x.py  model.tex
doc/figures/: alt_transcipt_picture.tex  transcipt-picture.tex
kmerexpr/: __init__.py  accel_mirror_solver.py  benchmark_kmer_length.py  benchmark_read_length.py  compare_optimizers.py  download_data.py  exp_grad_solver.py  fasta.py  frank_wolfe.py  lbfgs.py  lbfgs_COPIED_CODE.py  libkmers.py  load_plot_run_single.py  mg.py  mirror_lbfgs.py  multinomial_model.py  multinomial_simplex_model.py  normal_model.py  old.py  plot_kmer_density.py  plotting.py  polyester_loop.R  real_reads.py  requirements.txt  rna_seq_reader.py  rob_plaay.py  run_single.py  salmon_to_polyester.R  sample_genome_data.py  simple_example.py  simulate_reads.py  test_multinomial_model.py  test_rna_seq_reader.py  test_simulate_reads.py  test_transcriptome_reader.py  transcriptome_reader.py  utils.py
kmerexpr/get_data/: sample_genome_data.py
kmerexpr/plotting/: plots.py  (+1 more)
scripts/: run_single.py  simple_example.py  test_GRC.py
solver_comparison/: .mypy.ini  env.bat.example  env.sh.example  readme.md  requirements.txt  setup.cfg
src/: libkmers.cpp  libkmers.h
test/: README.md  test.py  test_fasta.py  test_imports.py  test_multinomial_model.py  test_multinomial_simplex_model.py  test_normal_model.py  test_reader.py  test_rna_seq_reader.py  test_simulate_reads.py  test_transcriptome_reader.py
(+20 files in other folders)
