[metadata]
name = kmerexpr
version = 0.0.1
author = Bob Carpenter, Robert Gower, and Brian Ward
author_email = bcarpenter@flatironinstitute.org
description = A Python package for estimating isoform expression
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
url = https://github.com/bob-carpenter/kmers
project_urls =
    Bug Tracker = https://github.com/bob-carpenter/kmers/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy >= 1.18
    scipy >= 1.5
